# dd_generator

./: CMakeLists.txt
include/: dd_generator.hpp
module/: dd_generator.ixx
tests/: CMakeLists.txt  test_dd_generator.cpp
