cmake_minimum_required(VERSION 3.21)
project(dd_generator LANGUAGES CXX)

include(CTest)

if(BUILD_TESTING)
	set(${CMAKE_PROJECT_NAME}_TEST ${CMAKE_CURRENT_SOURCE_DIR}/tests/test_${CMAKE_PROJECT_NAME}.cpp)
	file(GLOB ${CMAKE_PROJECT_NAME}_EXAMPLES REGULAR_EXPRESSION ${CMAKE_CURRENT_SOURCE_DIR}/examples/*)
	add_executable(${CMAKE_PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/include/${CMAKE_PROJECT_NAME}.hpp ${${CMAKE_PROJECT_NAME}_TEST} ${${CMAKE_PROJECT_NAME}_EXAMPLES})
	set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES
							CMAKE_CXX_STANDARD_REQUIRED ON
							CXX_STANDARD 23
							CMAKE_CXX_EXTENSIONS OFF
							LINKER_LANGUAGE CXX)
	target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
endif()

add_library(${CMAKE_PROJECT_NAME}lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include/${CMAKE_PROJECT_NAME}.hpp)
set_target_properties(${CMAKE_PROJECT_NAME}lib PROPERTIES
						CMAKE_CXX_STANDARD_REQUIRED ON
						CXX_STANDARD 23
						CMAKE_CXX_EXTENSIONS OFF
						LINKER_LANGUAGE CXX)
target_include_directories(${CMAKE_PROJECT_NAME}lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_library(${CMAKE_PROJECT_NAME}_module STATIC ${CMAKE_CURRENT_SOURCE_DIR}/include/${CMAKE_PROJECT_NAME}.hpp ${CMAKE_CURRENT_SOURCE_DIR}/module/${CMAKE_PROJECT_NAME}.ixx)
set_target_properties(${CMAKE_PROJECT_NAME}_module PROPERTIES
						CMAKE_CXX_STANDARD_REQUIRED ON
						CXX_STANDARD 23
						CMAKE_CXX_EXTENSIONS OFF
						LINKER_LANGUAGE CXX)

target_include_directories(${CMAKE_PROJECT_NAME}_module PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/module)
source_group(Include FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/${CMAKE_PROJECT_NAME}.hpp)
if(BUILD_TESTING)
	source_group(Examples FILES ${${CMAKE_PROJECT_NAME}_EXAMPLES})
	target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE examples)
	source_group(Tests FILES ${${CMAKE_PROJECT_NAME}_TEST})
	source_group(Include FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/${CMAKE_PROJECT_NAME}.hpp)
	add_subdirectory(tests)
endif()